objects/PLM_label_field_refrence__c.object
<CustomObject>
    <description>This table is used by Cast Iron to map RTS PLM names to field names in SFDC for the Name value pairing in the PLM Project push system</description>
    <fields>
        <fullName>FieldType__c</fullName>
        <description>This field will determine if the value should go to which strongly typed object - &quot;Request Attribute&quot; or &quot;Item Attribute&quot;</description>
        <label>FieldType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Attribute</fullName>
                </value>
                <value>
                    <fullName>Item Attribute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>this contains the name for the name value pair</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Object_Name__c</fullName>
        <description>The name of the object the value comes from in sfdc</description>
        <label>SFDC Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Field_name__c</fullName>
        <description>the SFDC field name for the value in the name value pair</description>
        <label>Value Field name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PLM label field refrence</label>
    <listViews>
        <fullName>Show_Field_Name_Comparision</fullName>
        <columns>FieldType__c</columns>
        <columns>Name__c</columns>
        <columns>SFDC_Object_Name__c</columns>
        <columns>Value_Field_name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Show Field Name Comparision</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>PLMREFRENCE NUMBER</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLM label field refrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>